APB-236 reports fixes, qrcode fixed position, null values empty not "null", adding object and object_name in sql for faster sql,  error message with padding to hide scrollbar when too small, added more arguments to pupeteer and PDF report is loading report once

--- a/apps/app2/css/app_report.css
+++ b/apps/app2/css/app_report.css
@@ -102,6 +102,7 @@
     transform: scale(0.8);
 	opacity: 0.8;
     align-self: end;
+	position: fixed;
 }
 .prayertable_qr_code svg{
 	border: 4px solid white;
